# RI-AI

install/: local_setup 2.sh  setup 2.ps1  setup 2.sh
install/message_info/lib/: libmessage_info__python.dylib  libmessage_info__rosidl_generator_c 2.dylib  libmessage_info__rosidl_typesupport_c.dylib  libmessage_info__rosidl_typesupport_cpp.dylib  libmessage_info__rosidl_typesupport_fastrtps_c.dylib  libmessage_info__rosidl_typesupport_fastrtps_cpp.dylib  libmessage_info__rosidl_typesupport_introspection_c 2.dylib  libmessage_info__rosidl_typesupport_introspection_cpp.dylib
install/proto_info/lib/: libproto_info.dylib
install/sender/lib/: libsender__python 2.dylib  libsender__rosidl_generator_c.dylib  libsender__rosidl_typesupport_c.dylib  libsender__rosidl_typesupport_cpp.dylib  libsender__rosidl_typesupport_fastrtps_c.dylib  libsender__rosidl_typesupport_fastrtps_cpp 2.dylib  libsender__rosidl_typesupport_introspection_c.dylib  libsender__rosidl_typesupport_introspection_cpp 2.dylib
log/: latest_build
log/build_2020-08-07_13-22-15/main/: .command 2.log.icloud  .stdout_stderr 2.log.icloud  .streams 2.log.icloud
log/build_2020-08-07_13-22-15/message_info/: .streams 2.log.icloud
log/build_2020-08-07_13-22-15/reciever/: .command 2.log.icloud  .streams 2.log.icloud
log/build_2020-08-07_13-22-15/sender/: .command 2.log.icloud  .stdout 2.log.icloud  .streams 2.log.icloud
log/build_2020-08-07_13-47-49/main/: .stdout 2.log.icloud  .stdout_stderr 2.log.icloud  .streams 2.log.icloud
log/build_2020-08-07_13-47-49/message_info/: .command 2.log.icloud
log/build_2020-08-07_13-47-49/proto_info/: .streams 2.log.icloud
log/build_2020-08-07_13-47-49/reciever/: .stdout 2.log.icloud  .streams 2.log.icloud
log/build_2020-08-07_13-47-49/sender/: .command 2.log.icloud  .stdout 2.log.icloud  .stdout_stderr 2.log.icloud  .streams 2.log.icloud
log/build_2020-08-07_13-50-03/main/: .stdout_stderr 2.log.icloud  .streams 2.log.icloud
log/build_2020-08-07_13-50-03/proto_info/: .stdout 2.log.icloud
log/build_2020-08-07_14-20-49/main/: .stderr 2.log.icloud  .stdout_stderr 2.log.icloud  .streams 2.log.icloud
log/build_2020-08-07_14-21-39/main/: .stderr 2.log.icloud  .stdout 2.log.icloud  .stdout_stderr 2.log.icloud  .streams 2.log.icloud
log/build_2020-08-07_14-21-39/sender/: .stdout_stderr 2.log.icloud
log/build_2020-08-07_14-52-43/main/: .command 2.log.icloud  .stderr 2.log.icloud  .stdout_stderr 2.log.icloud  .streams 2.log.icloud
log/build_2020-08-07_14-52-43/sender/: .streams 2.log.icloud
log/build_2020-08-07_14-53-34/main/: .stderr 2.log.icloud  .stdout 2.log.icloud  .streams 2.log.icloud
log/build_2020-08-07_14-53-34/sender/: .stderr 2.log.icloud
log/build_2020-08-07_15-30-58/main/: .stdout 2.log.icloud  .stdout_stderr 2.log.icloud  .streams 2.log.icloud
log/build_2020-08-07_15-30-58/message_info/: .stdout_stderr 2.log.icloud
log/build_2020-08-07_15-30-58/reciever/: .command 2.log.icloud
log/build_2020-08-07_15-30-58/sender/: .command 2.log.icloud
log/build_2020-08-07_16-43-01/main/: .command 2.log.icloud  .stdout 2.log.icloud  .stdout_stderr 2.log.icloud  .streams 2.log.icloud
log/build_2020-08-08_10-52-52/sender/: .streams 2.log.icloud
log/build_2020-08-08_10-59-07/: .logger_all 2.log.icloud
log/build_2020-08-08_10-59-07/main/: .stderr 2.log.icloud  .stdout 2.log.icloud  .stdout_stderr 2.log.icloud  .streams 2.log.icloud
log/build_2020-08-08_10-59-07/reciever/: .stdout_stderr 2.log.icloud
log/build_2020-08-08_10-59-07/sender/: .streams 2.log.icloud
log/build_2020-08-08_11-00-22/main/: .command 2.log.icloud  .stdout 2.log.icloud  .stdout_stderr 2.log.icloud  .streams 2.log.icloud
log/build_2020-08-08_11-00-22/message_info/: .streams 2.log.icloud
log/build_2020-08-08_11-00-22/proto_info/: .command 2.log.icloud
log/build_2020-08-08_11-00-22/reciever/: .command 2.log.icloud  .streams 2.log.icloud
log/build_2020-08-08_11-00-22/sender/: .command 2.log.icloud
log/build_2020-08-08_11-12-05/main/: .command 2.log.icloud  .stderr 2.log.icloud  .stdout 2.log.icloud  .stdout_stderr 2.log.icloud  .streams 2.log.icloud
log/build_2020-08-08_11-12-05/message_info/: .stdout 2.log.icloud
log/build_2020-08-08_11-12-05/proto_info/: .stdout_stderr 2.log.icloud
log/build_2020-08-08_11-12-05/sender/: .streams 2.log.icloud
log/build_2020-08-08_23-01-16/main/: .command 2.log.icloud  .stdout_stderr 2.log.icloud  .streams 2.log.icloud
log/build_2020-08-08_23-01-16/message_info/: .stdout 2.log.icloud  .stdout_stderr 2.log.icloud  .streams 2.log.icloud
log/build_2020-08-08_23-01-16/proto_info/: .stdout 2.log.icloud  .streams 2.log.icloud
log/build_2020-08-08_23-01-16/reciever/: .command 2.log.icloud  .stdout 2.log.icloud  .stdout_stderr 2.log.icloud  .streams 2.log.icloud
log/build_2020-08-08_23-01-16/sender/: .command 2.log.icloud  .stdout 2.log.icloud  .stdout_stderr 2.log.icloud  .streams 2.log.icloud
main/: CMakeLists.txt  CMakefile  package.xml
main/install/: setup.ps1
main/launch/: main.launch.py
main/src/: attacker.cpp  attacker.hpp  calculate.cpp  calculate.hpp  defense.cpp  defense.hpp  game.cpp  game.hpp  goalie.cpp  goalie.hpp  homeposition.cpp  homeposition.hpp  main.cpp  offense.cpp  offense.hpp  referee_translate.cpp  referee_translate.hpp  role.cpp  role.hpp
message_info/: CMakeLists.txt
message_info/msg/: Attacker.msg  DetectionFrame.msg  GoalInfo.msg  Goalie.msg  Referee.msg  RobotCommand.msg  Role.msg  VisionDetections.msg
reciever/: CMakeLists.txt  package.xml
reciever/include/reciever/: multicast.hpp
reciever/src/: grsim_receiver.cpp  referee_receiver.cpp
sender/: CMakeLists.txt
sender/install/: local_setup.ps1  local_setup.sh  setup.bash  setup.sh
sender/launch/: sender.launch
sender/log/: latest_build
sender/src/: out.cpp  real_sender.cpp  sim_sender.cpp
src/message_info/: CMakeLists.txt
src/proto_info/: CMakeLists.txt
src/sender/: CMakeLists.txt
src/sender/install/: setup.zsh
src/sender/launch/: sender.xml
src/sender/msg/install/: local_setup.bash  setup.bash  setup.ps1
(+224 files in other folders)
